# next

./: .env  Cargo.toml  app_config.json
api/: Cargo.toml
api/src/: app.rs  config.rs  error.rs  extra.rs  lib.rs  users.rs
api/src/admin/: apis.rs  models.rs  routes.rs
api/src/data/: mod.rs
api/src/middlewares/: mod.rs
api/src/middlewares/auth/: mod.rs
api/src/middlewares/service_auth/: mod.rs
api/src/models/: mod.rs
api/src/users/: apis.rs  mod.rs  models.rs  routes.rs
core/: Cargo.toml
core/src/: lib.rs  users.rs
core/src/level_template/: api.rs  mod.rs
core/src/popularity/: api.rs  mod.rs
core/src/users/: api.rs  mod.rs  models.rs
core/tests/: mock.rs  prepare.rs
entity/: Cargo.toml
entity/src/: level_template.rs  lib.rs  popularity.rs  users.rs
migration/: Cargo.toml
migration/src/: create_users.rs  level_template.rs  lib.rs  popularity.rs
rfcs/: 0001-user.md  0002-popularity.md
rfcs/drawios/: popularity.drawio  user.drawio
service/: Cargo.toml
service/src/: error.rs  lib.rs
service/src/level_template/: mod.rs
service/src/popularity/: mod.rs
service/src/users/: mod.rs
src/: main.rs
