[package]
name = "next-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 错误处理
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }

tokio = { version = "1.0", features = ["full"] }
poem = { version = "1.3" }

