[package]
name = "next-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 错误处理
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }

tokio = { version = "1.0", features = ["full"] }
poem = { version = "1.3" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0" }

figment = { version = "0.10", features = ["env"] }

next-service = { path = "../service" }

tracing-subscriber = { version = "0.3" }
tracing = { version = "0.1" }

# 字段检查
validator = { version = "0.16",  features = ["derive"] }

dotenvy = { version = "0.15" }

jwt = { version = "0.16" }
hmac = { version = "0.12" }
sha2 = { version = "0.10" }
