[package]
name = "next-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
mock = ["next-entity/mock"]

[dependencies]
next-entity = { path = "../entity" }

chrono = { version = "0.4" }

xid = { version = "1.0" }


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[[test]]
name = "mock"
required-features = ["mock"]