[package]
name = "next-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mock = ["sea-orm/mock"]

[dependencies]
sea-orm = { version = "0.9", features = ["runtime-tokio-native-tls", "sqlx-mysql", "debug-print"]}

serde = { version = "1.0", features = ["derive"] }