[package]
name = "next-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
next-core = { path = "../core" }

thiserror = { version = "1.0" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

sha2 = { version = "0.10" }
tracing = { version = "0.1" }

# 正则
regex = { version = "1.7" }

# 检验
validator = { version = "0.16",  features = ["derive"] }
